[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envmnt = "0.9.1"
tokio = { version = "1", features = ["full"] }
actix-web = "4.0.1"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres" ] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

database = { path = "../database" }
